--- a/Copy_of_assignment_2.ipynb
+++ b/Copy_of_assignment_2.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ajc4be/Assingment_2/blob/main/Copy_of_assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "13ad028b-72b7-43ed-aa78-96fd4e518040",
       "metadata": {
         "id": "13ad028b-72b7-43ed-aa78-96fd4e518040"
@@ -35,7 +45,7 @@
         "Q1\n",
         "1.\tThe paper is about data tidying, which is a process of making data cleaning easy and effective. By using this framework, datasets are easier to manipulate, analyze, model, and visualize.\n",
         "\n",
-        "2.\tThe “tiny data standard” intends to facilitate the initial exploration of data and simplify the development of data analysis tools.\n",
+        "2.\tThe “tidy data standard” intends to facilitate the initial exploration of data and simplify the development of data analysis tools.\n",
         "\n",
         "3.\tThe first sentence means that all tidy datasets are standardized and uniform, and therefore easy to analyze. In comparison, there are countless ways that a messy dataset can be messy and therefore hard to analyze.\tThe second sentence means that there are a lot of factors at play that influence how variables and observations are defined, though they are usually easy to spot. One way in which variables and observations can be confused is by how a table is arranged.\n",
         "\n",
@@ -1887,7 +1897,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
